# AskBro

./: ARCHITECTURE.md  AUTH_REDESIGN_PROPOSAL.md  AskBro_PRD.md  CHAT_REDESIGN_PROPOSAL.md  GITHUB_INTEGRATION_PROPOSAL.md  IMPLEMENTATION_PLAN.md  NOTION_INTEGRATION.md  RAILWAY_DEPLOYMENT.md  README.md  RENDER_DEPLOYMENT.md  RUNNING.md
backend/: .env.example  .gitignore  celery_app.py  main.py  pyproject.toml  requirements.txt  start.ps1  start.sh
backend/config/: env.py  qdrant.py  storage.py
backend/controllers/: admin_controller.py  blog_controller.py  chat_controller.py  document_controller.py  github_controller.py  integrations_controller.py  testimonial_controller.py  workspace_controller.py
backend/db/: base.py  session.py
backend/middleware/: admin_auth.py  auth.py  rate_limit.py  rbac.py
backend/models/: audit_log.py  blog_post.py  chat.py  chunk.py  document.py  github_integration.py  github_repo.py  message.py  notion_integration.py  testimonial.py  user.py  workspace.py
backend/queues/: ingestion_queue.py  queue_monitor.py
backend/routes/: admin.py  blog.py  chat.py  documents.py  github.py  health.py  integrations.py  testimonials.py  workspaces.py
backend/schemas/: admin.py  blog.py  chat.py  document.py  github_schemas.py  integrations.py  testimonial.py  user.py  workspace.py
backend/services/chunking/: enricher.py  splitter.py
backend/services/email/: resend_client.py
backend/utils/: crypto.py  file_validator.py  gridfs_storage.py  logger.py  token_counter.py
backend/workers/: cleanup_github_worker.py  cleanup_worker.py  github_ingestion_worker.py  ingestion_worker.py
frontend/: start.ps1  (+2 more)
(+121 files in other folders)
