[project]
name = "askbro-backend"
version = "0.1.0"
description = "AskBro — RAG-powered internal knowledge assistant"
requires-python = ">=3.11"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    # Configuration
    "pydantic[email]>=2.0.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
    # Authentication
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    # Database (MongoDB async)
    "motor>=3.7.0",
    "beanie>=1.26.0,<2.0.0",
    # Task queue
    "celery[mongodb]>=5.3.0",
    "flower>=2.0.0",
    # Vector store
    "qdrant-client>=1.9.0",
    # RAG / LangChain
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-huggingface>=0.0.3",
    # Embeddings & reranking
    "sentence-transformers>=3.0.0",
    "transformers>=4.41.0",
    "torch>=2.3.0",
    "FlagEmbedding>=1.2.9",
    # Document loaders
    "pypdf>=4.2.0",
    "docx2txt>=0.8",
    # Chunking / token counting
    "tiktoken>=0.7.0",
    "rank-bm25>=0.2.2",
    # File storage via MongoDB GridFS (motor already listed above — no extra dep needed)
    # File validation & secret scanning
    "python-magic>=0.4.27",
    "detect-secrets>=1.4.0",
    # Rate limiting
    "slowapi>=0.1.9",
    # HTTP client (LLM API calls)
    "httpx>=0.27.0",
    # Structured logging
    "structlog>=24.1.0",
]


[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "factory-boy>=3.3.0",
]
